--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,10 +4,11 @@ services:
   orders-db:
     container_name: orders_database
     image: postgres:16.2
+    restart: always
     volumes:
       - ./postgres:/var/lib/postgresql/data
     ports:
-      - 5433:5432
+      - 5432:5432
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=1069K09jf
